[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Xanh_Mono/XanhMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/portal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Characters/SeaHorse.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Characters/Fish1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Instructions/Attack.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Music and Sounds/Tutorial.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Instruction" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 180.418 ],
"_edit_use_anchors_": false
}

[node name="Backgound" parent="." instance=ExtResource( 6 )]

[node name="Label1" type="Label" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_right = -6.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "After Learning the movements let's learn how to attack enemies"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Use X or J to Attack the Enemy"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Use X or J to Attack the Enemy"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 142.474, 92.3294 )
move = false
action = false

[node name="Fish" parent="." instance=ExtResource( 4 )]
position = Vector2( 280.79, 114.186 )
movement = false

[node name="Sprite" parent="Fish" index="0"]
frame = 2

[node name="HitBox" parent="Fish" index="5"]
damage = 0

[node name="Portal" parent="." instance=ExtResource( 2 )]
position = Vector2( 55, 118 )
change_scene = "res://Scenes/Instruction/CatalogueH.tscn"

[node name="Portal" parent="Portal" index="1"]
position = Vector2( -40.0188, -24.5048 )
scale = Vector2( 0.489951, 0.530823 )
frame = 3

[node name="CollisionShape2D" parent="Portal" index="2"]
position = Vector2( -38.39, -23.8348 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.748
autoplay = true
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]

[editable path="Backgound"]

[editable path="Fish"]

[editable path="Portal"]
